feat: add customers endpoints
